# voicepress

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: app.py
src/new_project/: cli.py
src/static/: editor.js  styles.css
src/templates/: 404.html  500.html  about.html  authors.html  base.html  category_posts.html  contact.html  dashboard.html  edit_post.html  features.html  home.html  login.html  new_post.html  post_detail.html  profile.html  register.html  settings.html  tag_posts.html  user_blog.html
tests/: test_app_safety.py  test_database_path.py  test_smoke.py
