[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "voicepress"
version = "0.1.0"
description = "VoicePress: a multi-user Flask blogging MVP with dictation-friendly writing tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "family" }]
dependencies = [
  "flask>=3.0.0",
  "markdown",
  "bleach",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
voicepress = "new_project.cli:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
